--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="profilepics.jpeg" alt="my profile">
     <h1>EMMANUEL SEGUN JOHN</h1>
     <p><em>this is <strong>Big Emmy</strong> an <strong>ethical hacker</strong> also becoming a <strong> website development</strong></em></p>
-    <p>i am a young boy attending <a href="https://www.babcock.edu.ng/">Backcock university</a>, i went to Technical college high scool in benin, <br> for my senior secondary.
+    <p>i am a young boy attending <a href="https://www.babcock.edu.ng/">Babcock university</a>, i went to Technical college high school in benin, <br> for my senior secondary.
        also went to word of faith in benin city. so currently in babcock university <br> i'm studing software engineering as a course
        and  i'm currenly in 400 level. l ❤ fine girls </p>
        <hr>
